Fix apparence of face on mobile

--- a/themes/mnmlist/static/css/main.css
+++ b/themes/mnmlist/static/css/main.css
@@ -75,6 +75,7 @@ img {
 
 img.align-right {
   float: right;
+  max-width: 50%;
 }
 
 blockquote {
